[project]
name = "magic-eye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pip>=25.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
